--- a/angular.json
+++ b/angular.json
@@ -36,8 +36,10 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
+            "styles": [              
+			  "src/styles.scss",
+			  "node_modules/ngx-toastr/toastr.css",
+              "@angular/material/prebuilt-themes/deeppurple-amber.css"
             ],
             "scripts": []
           },
@@ -60,7 +62,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -97,8 +105,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
-            ],
+			  "src/styles.scss",
+			  "node_modules/ngx-toastr/toastr.css",
+			  "@angular/material/prebuilt-themes/deeppurple-amber.css"
+			],
             "scripts": []
           }
         }
