--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,11 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/github-repo-viewer",
+			"stylePreprocessorOptions": {
+				"includePaths": [
+				  "src/assets/styles/"
+				]
+			  },
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
